--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "axios": "^1.11.0",
     "clsx": "^2.1.1",
     "next": "15.5.2",
+    "quill": "^2.0.3",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.62.0",
     "react-icons": "^5.5.0",
+    "react-quill-new": "^3.6.0",
     "react-redux": "^9.2.0",
     "react-toastify": "^11.0.5",
     "tailwind-merge": "^3.3.1",
