--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@reduxjs/toolkit": "^2.9.0",
     "axios": "^1.11.0",
     "clsx": "^2.1.1",
+    "jwt-decode": "^4.0.0",
     "next": "15.5.2",
     "quill": "^2.0.3",
     "react": "19.1.0",
